@@ -71,7 +71,7 @@ extern int h_errno;     /* This isn't declared in a header file on HP-UX */
 // But doesn't have a prototype for syscall()
 #define ACE_LACKS_SYSCALL
 
-// Platform supports POSIX 1.b clock_gettime ()
+// Platform supports POSIX.1b clock_gettime ()
 #define ACE_HAS_CLOCK_GETTIME
 #define ACE_HAS_CLOCK_SETTIME
 
